@@ -109,6 +109,7 @@ if [ "x\${res}" != x ]; then
 fi
 EOF
 
+echo /opt/rtcds/$site/${lower_ifo}/scripts/start${system}
 /bin/touch /opt/rtcds/$site/${lower_ifo}/scripts/start${system}
 /bin/chmod +x /opt/rtcds/$site/${lower_ifo}/scripts/start${system}
 
@@ -127,7 +128,22 @@ sleep 5
 (cd /opt/rtcds/$site/${lower_ifo}/target/${system}/${system}epics && ./startup${ifo})
 sleep 5
 /opt/rtcds/$site/${lower_ifo}/target/${system}/scripts/startup${ifo}rt
-sleep 5
+# wait until real-time is active 
+gpsbad=true
+numsec=0
+while [ \$gpsbad = true ] && ((\$numsec < 80))
+do
+  sleep 1
+  numsec=\$((\$numsec+1))
+  if [ -e /proc/${system}/status ]; then
+    GPS=\`cat /proc/${system}/status | grep gps\`
+    if (( "\$GPS" > 0 )); then
+      echo '${system} RT ready in '\$numsec
+      gpsbad=false 
+    fi
+  fi
+done
+#
 sudo killall -q daqd
 if [ -e /var/run/init.d/awgtpman_${system} ]; then
 	sudo /var/run/init.d/awgtpman_${system} start
